--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -39,7 +39,14 @@
           </li>
 
           <li class="link-item">
-            <span class="iconfont icon-yueliang"></span>
+            <span
+              class="iconfont icon-yueliang theme-btn active"
+              onclick="changeTheme(0)"
+            ></span>
+            <span
+              class="iconfont icon-taiyang theme-btn"
+              onclick="changeTheme(1)"
+            ></span>
           </li>
         </ul>
       </div>
