修改翻译默认值

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -26,31 +26,31 @@
           <li class="nav link-item">
             <a href="#home">
               <span class="iconfont icon-home hid"></span>
-              <span i18n="home">Home</span>
+              <span i18n="home">首页</span>
             </a>
           </li>
           <li class="nav link-item">
             <a href="#about">
               <span class="iconfont icon-caidanguanyuwo hid"></span>
-              <span i18n="about">About</span>
+              <span i18n="about">关于</span>
             </a>
           </li>
           <li class="nav link-item">
             <a href="#skills">
               <span class="iconfont icon-jinengliang hid"></span>
-              <span i18n="skills">Skills</span>
+              <span i18n="skills">技能</span>
             </a>
           </li>
           <li class="nav link-item">
             <a href="#portfolio">
               <span class="iconfont icon-jianli hid"></span>
-              <span i18n="portfolio">Portfolio</span>
+              <span i18n="portfolio">资历</span>
             </a>
           </li>
           <li class="nav link-item">
             <a href="#contact">
               <span class="iconfont icon-lianxiwomen hid"></span>
-              <span i18n="contact">Contact</span>
+              <span i18n="contact">联系方式</span>
             </a>
           </li>
 
