--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -48,6 +48,12 @@
             </a>
           </li>
           <li class="nav link-item">
+            <a href="#tool">
+              <span class="iconfont icon-jianli hid"></span>
+              <span i18n="tool">工具包</span>
+            </a>
+          </li>
+          <li class="nav link-item">
             <a href="#contact">
               <span class="iconfont icon-lianxiwomen hid"></span>
               <span i18n="contact">联系方式</span>
@@ -248,6 +254,27 @@
               <div class="node"></div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section id="tool" class="main-item container">
+        <h1 class="title">工具包</h1>
+        <p class="desc">我的插件</p>
+        <div class="tool">
+          <ul>
+            <li class="tool-item">
+              <span class="mark"></span>
+              <a href="../watermark/index.html" target="_blank">水印</a>
+              <div>
+                <a
+                  href="https://github.com/XONC/xlpjstool/blob/master/src/watermark.js"
+                  target="_blank"
+                >
+                  <span class="iconfont icon-github"></span>
+                </a>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
