--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -231,7 +231,7 @@
                 <p>招商银行</p>
                 <div class="date">
                   <span class="iconfont icon-rili"></span>
-                  <span>2022.01 - 2023.01 </span>
+                  <span>2022.01 - 至今 </span>
                 </div>
               </div>
             </div>
